# second-brain

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-repo-foundation/: 01-01-PLAN.md  (+12 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
alembic/: env.py
alembic/versions/: 0002_create_users_and_refresh_tokens.py  0003_add_user_id_to_notes.py  0004_add_tags.py  0005_add_collections.py  0006_add_note_summary.py  d51191e92276_create_notes_table.py
app/: database.py  main.py
app/ai/: prompts.py  router.py  schemas.py  service.py
app/api/: health.py
app/auth/: models.py  repository.py  router.py  schemas.py  service.py
app/collections/: models.py  repository.py  router.py  schemas.py  service.py
app/core/: config.py  dependencies.py
app/notes/: models.py  repository.py  router.py  schemas.py  service.py
app/search/: __init__.py  repository.py  router.py  schemas.py  service.py
app/tags/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
docker/: Dockerfile
tests/: conftest.py  test_auth.py  test_collections.py  test_health.py  test_notes.py  test_notes_crud.py  test_notes_isolation.py  test_notes_list.py  test_notes_service_isolation.py  test_notes_tag_filter.py  test_phase4_isolation.py  test_search.py  test_tags.py
tests/ai/: test_live_ollama.py  test_suggest_tags.py  test_summarize.py
(+63 files in other folders)
